# bazel-pgexample-debian-deps

./: .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md
debian/: ccinfo.bzl  extension.bzl  pkg.bzl
docker/: Makefile  sandbox.Dockerfile
postgres/: BUILD  pg.MODULE.bazel  pgflex_env_m4.diff
toolchains/: toolchains.MODULE.bazel
