"""Postgres"""

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

PGSRC_BUILD_FILE = """
filegroup(
    name = "src",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

http_archive(
    name = "postgres_16.4",
    build_file_content = PGSRC_BUILD_FILE,
    patch_args = ["-p1"],
    patches = ["//postgres:pgflex_env_m4.diff"],
    sha256 = "ec7a01752aa6484fd477ef0fce4725a4cf1eddeb3df8f27891e3364bd2a8ea99",
    strip_prefix = "postgres-REL_16_4",
    url = "https://github.com/postgres/postgres/archive/refs/tags/REL_16_4.tar.gz",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.9")

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(bazel_lib_toolchains, "bsd_tar_toolchains")
use_repo(bazel_lib_toolchains, "bsd_tar_darwin_amd64")
use_repo(bazel_lib_toolchains, "bsd_tar_darwin_arm64")
use_repo(bazel_lib_toolchains, "bsd_tar_linux_amd64")
use_repo(bazel_lib_toolchains, "bsd_tar_linux_arm64")

deb = use_extension("//debian:extension.bzl", "deb")
deb.pkg(
    name = "libssl_3.4.0_amd64",
    sha256 = "de5fcb20559a0b9f0812f7b6b8c79ae4c462fc1b0ac12719433401f0d43a84ad",
    url = "https://snapshot.debian.org/archive/debian/20241103T211723Z/pool/main/o/openssl/libssl-dev_3.4.0-1_amd64.deb",
)
use_repo(deb, "libssl_3.4.0_amd64")
deb.pkg(
    name = "libssl_3.4.0_arm64",
    sha256 = "a27da4370ec3a342de6971852b4e5df48ca2cd2480fea2e058a5fc3c6effff24",
    url = "https://snapshot.debian.org/archive/debian/20241103T211723Z/pool/main/o/openssl/libssl-dev_3.4.0-1_arm64.deb",
)
use_repo(deb, "libssl_3.4.0_arm64")
deb.pkg(
    name = "libssl3_3.1.5_amd64",
    sha256 = "57faabf7795d466ee9d7bb74a2a19861ed18e7fe396e96c1f7b32a363ab4bc6c",
    url = "https://snapshot.debian.org/archive/debian/20240210T223313Z/pool/main/o/openssl/libssl3_3.1.5-1_amd64.deb",
)
use_repo(deb, "libssl3_3.1.5_amd64")
deb.pkg(
    name = "libssl3_3.1.5_arm64",
    sha256 = "8b5f27f4a21da44d7c19ab227d18f602e5593d173c8e9434cfa3c4c123195844",
    url = "https://snapshot.debian.org/archive/debian/20240210T223313Z/pool/main/o/openssl/libssl3_3.1.5-1_arm64.deb",
)
use_repo(deb, "libssl3_3.1.5_arm64")
